# V2X_CARLA

./: Readme.md
src/MAPData/: Inspiration_1743.json
src/SPaTData/: Inspiration_1743_sample.json
src/sim_connector/: package.xml  setup.cfg  setup.py
src/sim_connector/sim_connector/: sim_connector.py
src/v2x_node/: CMakeLists.txt  package.xml
src/v2x_node/include/: vehicle_v2x_node.hpp
src/v2x_node/src/: v2x_node.cpp  vehicle_node.cpp  vehicle_v2x_node.cpp
